2010-04-06 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (setJdkHome): bug fix - check 'jdkHome' for bin directory
	  not 'jdeHome' from the base class


2010-02-22 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java (setIcon): check non-null AND non-empty string
	  (setFocusIcon): check non-null AND non-empty string
	  (setFile): use null as default for icon when properties file missing attribute


2010-02-16 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java: new base class for JdpType and EntryPointType that
	  contains common properties shared by the two.
	* EntryPointType.java: now derived from BaseJdpType
	* JdpType: now derived from BaseJdpType
	  (writeManifest): output extra icons and focus icons to manifest file
	* Utils.java (join): new method, join array of strings with commas.


2009-09-15 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (nopreverify): applied patch from Phil Smith that passes
	  flag to rapc compiler instructing it to skip preverify step.


2009-09-11 Josh Kropf <josh@slashdev.ca>

	* JadtoolTask.java (executeRewrite): trim spaces from the value part of
	  key/value pairs in origional .jad file.


2009-09-11 Josh Kropf <josh@slashdev.ca>

   * JadtoolTask.java: applied patch from Marek Uhel to fix incorrect numbering
     of RIM-COD-URL-* attributes in generated .jad file.


2009-07-08 Josh Kropf <josh@slashdev.ca>

   * JadtoolTask.java: <jadtool> task was updating element overrides but not
     adding new ones.


2009-07-03 Josh Kropf <josh@slashdev.ca>

   * docs.txt: update documentation for <entry> element to make it clear
     that this element is a nested element of the <jdp> element.


2009-07-02 Josh Kropf <josh@slashdev.ca>

   * ApplicationType.java: Ensure destination directory for cod files is
     always set to avoid cod files being copied to current working directory
     by the <alx> task.


2009-03-11 Josh Kropf <josh@slashdev.ca>

   * ApplicationType.java: Neil Sainsbury's fixes to .alx file generation

