@@ -1,3 +1,9 @@
+2010-04-13 Josh Kropf <josh@slashdev.ca>
+
+	* RapcTask.java (executeRapc): copy Ant's JVM arguments when launching rapc
+	  compiler; fixes memory allocation issues when compiling large projects
+
+
 2010-04-06 Josh Kropf <josh@slashdev.ca>
 
 	* RapcTask.java (setJdkHome): bug fix - check 'jdkHome' for bin directory
